--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
 				</section>
 
 				<section>
-					<h2>Hello There</h2>
+					<h2>What is OpenRefine</h2>
 					<p>
-						reveal.js enables you to create beautiful interactive slide decks using HTML. This presentation will show you examples of what it can do.
+                                          Formerly known as Google Refine, OpenRefine is a free, open source tool for working with messy data, cleaning it up, transforming it from one format into another, and enhancing it with data from web services.
 					</p>
 				</section>
 
 				<!-- Example of nested vertical slides -->
 				<section>
 					<section>
-						<h2>Vertical Slides</h2>
-						<p>Slides can be nested inside of each other.</p>
+						<h2>Who uses OpenRefine</h2>
+						<img data-src="images/users.png">
 						<p>Use the <em>Space</em> key to navigate through all slides.</p>
 						<br>
 						<a href="#" class="navigate-down">
