added more slides

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                                 <section>
 						<h2>OpenRefine's Ecosystem</h2>
 						<img data-src="images/ecosystem.png">
+                                </section>
 					<section>
 						<h2>Reconciliation Services</h2>
 						<p>With OpenRefine, we can perform reconciliation against any web service supporting the Reconciliation Service API.</p>
